--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -120,7 +120,7 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="@dimen/_11sdp"
                         android:layout_marginRight="@dimen/_11sdp"
-                        android:background="@color/inactive_color"
+                        android:background="@color/blue_light"
                         android:layout_marginTop="@dimen/_11sdp"
                         android:layout_marginBottom="@dimen/_11sdp"
                         />
@@ -389,6 +389,11 @@
                             android:fontFamily="@font/opensans_regular"
                             android:textColor="@color/dark_grey"
                            />
+                        <LinearLayout
+                            android:id="@+id/withBankWithdrawalIDLL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
                         <TextView
                             android:id="@+id/withBankWithdrawidTV"
                             android:layout_width="match_parent"
@@ -408,6 +413,7 @@
                             android:layout_marginLeft="@dimen/_6sdp"
                             android:layout_gravity="center"
                             />
+                        </LinearLayout>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -427,6 +433,11 @@
                             android:fontFamily="@font/opensans_regular"
                             android:textColor="@color/dark_grey"
                             />
+                        <LinearLayout
+                            android:id="@+id/withBankReferenceIDLL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
                         <TextView
                             android:id="@+id/withBankReferenceIDTV"
                             android:layout_width="match_parent"
@@ -446,6 +457,7 @@
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_6sdp"
                             />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
