--- a/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
+++ b/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
@@ -117,7 +117,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginRight="@dimen/_11sdp"
-                android:background="@color/inactive_color"
+                android:background="@color/blue_light"
                 android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginBottom="@dimen/_11sdp"
                 />
@@ -164,12 +164,13 @@
                 android:paddingLeft="@dimen/_11sdp"
                 android:paddingRight="@dimen/_11sdp"
                 android:paddingTop="@dimen/_8sdp"
+                android:weightSum="1"
                 android:paddingBottom="@dimen/_10sdp"
                 >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.7"
                     android:text="Date &amp; Time"
                     android:textSize="@dimen/_11ssp"
                     android:fontFamily="@font/opensans_regular"
@@ -180,12 +181,11 @@
                     android:id="@+id/datetimeTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.3"
                     android:text=""
                     android:textSize="@dimen/_11ssp"
                     android:fontFamily="@font/opensans_semibold"
                     android:textColor="@color/primary_black"
-                    android:layout_marginLeft="@dimen/_11sdp"
                     android:gravity="right"
                     />
             </LinearLayout>
@@ -359,7 +359,12 @@
                                 android:textSize="@dimen/_11ssp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:textColor="@color/dark_grey" />
-                            <TextView
+                           <LinearLayout
+                               android:id="@+id/depositIDLL"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:orientation="horizontal">
+                               <TextView
                                 android:id="@+id/depositid"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -378,6 +383,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/_4sdp"
                                 />
+                           </LinearLayout>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -397,6 +403,11 @@
                                 android:fontFamily="@font/opensans_regular"
                                 android:textColor="@color/dark_grey"
                                 />
+                            <LinearLayout
+                                android:id="@+id/referenceIDLL"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
                             <TextView
                                 android:id="@+id/referenceIDTV"
                                 android:layout_width="match_parent"
@@ -415,8 +426,8 @@
                                 android:src="@drawable/ic_copy"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/_4sdp"
-
                                 />
+                            </LinearLayout>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
