--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -121,7 +121,7 @@
                           android:layout_gravity="center"
                           android:layout_marginLeft="@dimen/_11sdp"
                           android:layout_marginRight="@dimen/_11sdp"
-                          android:background="#d8e2f0"
+                          android:background="@color/blue_light"
                           android:layout_marginTop="@dimen/_11sdp"
                           android:layout_marginBottom="@dimen/_11sdp"
                           />
@@ -356,12 +356,16 @@
                               android:fontFamily="@font/opensans_regular"
                               android:textColor="@color/dark_grey"
                               />
+                          <LinearLayout
+                              android:id="@+id/withiwithdrawalLL"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:orientation="horizontal">
                           <TextView
                               android:id="@+id/withinwithdrawidTV"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
-                              android:text=""
                               android:textSize="@dimen/_11ssp"
                               android:fontFamily="@font/opensans_semibold"
                               android:textColor="@color/primary_black"
@@ -375,6 +379,7 @@
                               android:layout_marginLeft="@dimen/_6sdp"
                               android:layout_gravity="center"
                               />
+                          </LinearLayout>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
@@ -394,6 +399,12 @@
                               android:fontFamily="@font/opensans_regular"
                               android:textColor="@color/dark_grey"
                               />
+                          <LinearLayout
+                              android:id="@+id/withiReferenceIDLL"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:orientation="horizontal"
+                              >
                           <TextView
                               android:id="@+id/withinrefid"
                               android:layout_width="match_parent"
@@ -413,6 +424,7 @@
                               android:layout_marginLeft="@dimen/_6sdp"
                               android:layout_gravity="center"
                               />
+                          </LinearLayout>
                       </LinearLayout>
                   </LinearLayout>
               </androidx.cardview.widget.CardView>
