--- a/app/src/main/res/layout/payrequestdetails.xml
+++ b/app/src/main/res/layout/payrequestdetails.xml
@@ -67,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/_11sdp"
+                    android:paddingBottom="@dimen/_20sdp"
                     android:paddingRight="@dimen/_11sdp">
 
                     <TextView
@@ -125,7 +126,7 @@
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_11sdp"
                         android:layout_marginBottom="@dimen/_11sdp"
-                        android:background="#d8e2f0" />
+                        android:background="@color/blue_light" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -304,18 +305,16 @@
 
                         <LinearLayout
                             android:id="@+id/lyRefId"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
                             android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            android:paddingBottom="@dimen/_20sdp">
+                           >
 
                             <TextView
                                 android:id="@+id/refidTV"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
                                 android:singleLine="true"
@@ -395,9 +394,8 @@
 
                         <LinearLayout
                             android:id="@+id/lyAccAdd"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
                             android:orientation="horizontal">
 
                             <TextView
@@ -414,7 +412,7 @@
                             <ImageView
                                 android:layout_width="@dimen/_11sdp"
                                 android:layout_height="@dimen/_11sdp"
-                                android:layout_gravity="right"
+                                android:layout_gravity="right|center"
                                 android:layout_marginLeft="@dimen/_6sdp"
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
