--- a/app/src/main/res/layout/pending_posted_listitem.xml
+++ b/app/src/main/res/layout/pending_posted_listitem.xml
@@ -13,6 +13,7 @@
         android:fontFamily="@font/opensans_bold"
         android:gravity="center_vertical"
         android:paddingLeft="15dp"
+        android:clickable="false"
         android:paddingTop="@dimen/_10sdp"
         android:paddingBottom="@dimen/_10sdp"
         android:text="Date"
@@ -27,7 +28,11 @@
         android:background="@color/white"
         android:paddingTop="@dimen/_10sdp"
         android:paddingBottom="@dimen/_10sdp">
-
+<LinearLayout
+    android:id="@+id/topLL"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <TextView
             android:id="@+id/messageTV"
             android:layout_width="match_parent"
@@ -35,37 +40,31 @@
             android:layout_marginStart="@dimen/_11sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Send funds from Alison L"
+            android:layout_weight="1"
+            android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
 
+
         <TextView
             android:id="@+id/amountTV"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/_11sdp"
             android:fontFamily="@font/opensans_bold"
-            android:text="-100.00"
+            android:singleLine="true"
+            android:gravity="right"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
+</LinearLayout>
 
-
-        <!--            <androidx.cardview.widget.CardView-->
-        <!--                android:id="@+id/statusCVbg"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_below="@+id/messageTV"-->
-        <!--                android:layout_marginStart="@dimen/_11sdp"-->
-        <!--                android:layout_marginTop="@dimen/_8sdp"-->
-        <!--                app:cardBackgroundColor="#FFEFD8"-->
-        <!--                android:layout_marginBottom="@dimen/_1sdp"-->
-        <!--                app:cardCornerRadius="@dimen/_6sdp">-->
 
         <TextView
             android:id="@+id/statusTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/messageTV"
+            android:layout_below="@id/topLL"
             android:layout_marginStart="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/opensans_bold"
@@ -83,11 +82,13 @@
             android:id="@+id/balTXT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/messageTV"
+            android:layout_below="@+id/topLL"
             android:layout_marginTop="@dimen/_8sdp"
+            android:gravity="right"
             android:layout_toLeftOf="@id/balanceTV"
             android:fontFamily="@font/opensans_semibold"
             android:text="Balance "
+            android:layout_weight="1"
             android:textColor="@color/light_gray"
             android:textSize="@dimen/_10ssp" />
 
@@ -95,10 +96,12 @@
             android:id="@+id/balanceTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/messageTV"
+            android:layout_below="@id/topLL"
             android:layout_alignParentRight="true"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginRight="@dimen/_11sdp"
+            android:layout_weight="1"
+
             android:fontFamily="@font/opensans_semibold"
             android:textColor="@color/light_gray"
             android:textSize="@dimen/_10ssp" />
