--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -138,17 +138,12 @@
 
                         <TextView
                             android:id="@+id/btbankStatusTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_68sdp"
+                            android:layout_height="@dimen/_14sdp"
                             android:background="@drawable/fill_grn_color_smallradius"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
-                            android:paddingLeft="@dimen/_16sdp"
-                            android:paddingTop="@dimen/_2sdp"
-                            android:paddingRight="@dimen/_16sdp"
-                            android:paddingBottom="@dimen/_2sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
-                            android:layout_marginBottom="@dimen/_2sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:text="Completed"
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_7ssp" />
