--- a/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
+++ b/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
@@ -142,20 +142,15 @@
 
                 <TextView
                     android:id="@+id/statusTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/_2sdp"
-                    android:paddingBottom="@dimen/_2sdp"
-                    android:paddingLeft="@dimen/_16sdp"
-                    android:paddingRight="@dimen/_16sdp"
-                    android:layout_marginTop="@dimen/_7sdp"
-                    android:layout_marginBottom="@dimen/_2sdp"
+                    android:layout_width="@dimen/_68sdp"
+                    android:layout_height="@dimen/_14sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:background="@drawable/txn_completed_bg"
                     android:text="Completed"
                     android:textColor="@color/active_green"
-                    android:textSize="@dimen/_8sdp" />
+                    android:textSize="@dimen/_7sdp" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
