--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -146,19 +146,15 @@
 
                         <TextView
                             android:id="@+id/withBankStatusTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="@dimen/_2sdp"
-                            android:paddingLeft="@dimen/_16sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
-                            android:paddingRight="@dimen/_16sdp"
-                            android:paddingTop="@dimen/_2sdp"
+                            android:layout_width="@dimen/_68sdp"
+                            android:layout_height="@dimen/_14sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
                             android:text="Completed"
                             android:background="@drawable/txn_completed_bg"
                             android:textColor="@color/active_green"
-                            android:textSize="@dimen/_8ssp" />
+                            android:textSize="@dimen/_7sdp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
