--- a/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
@@ -134,19 +134,15 @@
 
                         <TextView
                             android:id="@+id/withdrawGiftStatusTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="@dimen/_2sdp"
-                            android:paddingLeft="@dimen/_16sdp"
-                            android:paddingRight="@dimen/_16sdp"
-                            android:paddingTop="@dimen/_2sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
+                            android:layout_width="@dimen/_68sdp"
+                            android:layout_height="@dimen/_14sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:background="@drawable/fill_grn_color_smallradius"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
                             android:text="Completed"
                             android:textColor="@color/active_green"
-                            android:textSize="@dimen/_8ssp" />
+                            android:textSize="@dimen/_7ssp" />
 
                     </LinearLayout>
                     <LinearLayout
