--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -146,19 +146,15 @@
 
                           <TextView
                               android:id="@+id/withinstatus"
-                              android:layout_width="wrap_content"
-                              android:layout_height="wrap_content"
-                              android:paddingBottom="@dimen/_2sdp"
-                              android:paddingLeft="@dimen/_16sdp"
-                              android:paddingRight="@dimen/_16sdp"
-                              android:paddingTop="@dimen/_2sdp"
-                              android:layout_marginTop="@dimen/_7sdp"
+                              android:layout_width="@dimen/_68sdp"
+                              android:layout_height="@dimen/_14sdp"
+                              android:layout_marginTop="@dimen/_6sdp"
                               android:background="@drawable/fill_grn_color_smallradius"
                               android:fontFamily="@font/opensans_bold"
                               android:gravity="center"
                               android:text="Completed"
                               android:textColor="@color/active_green"
-                              android:textSize="@dimen/_8ssp" />
+                              android:textSize="@dimen/_7ssp" />
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
@@ -478,7 +474,6 @@
                           android:orientation="horizontal"
                           android:paddingLeft="@dimen/_11sdp"
                           android:paddingBottom="@dimen/_11sdp"
-                          android:paddingTop="@dimen/_8sdp"
                           android:paddingRight="@dimen/_11sdp"
                           >
                           <TextView
@@ -486,6 +481,7 @@
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:text="Card Number"
+                              android:layout_marginTop="@dimen/_8sdp"
                               android:textSize="@dimen/_11ssp"
                               android:fontFamily="@font/opensans_regular"
                               android:textColor="@color/dark_grey"
@@ -495,7 +491,8 @@
                               android:id="@+id/withincardbrandIV"
                               android:layout_width="@dimen/_20sdp"
                               android:layout_height="@dimen/_20sdp"
-                              android:layout_gravity="right"
+                              android:layout_gravity="right|center"
+                              android:layout_marginTop="@dimen/_4sdp"
                               android:layout_marginLeft="@dimen/_6sdp"
                               android:layout_marginRight="@dimen/_8sdp"/>
 
@@ -503,7 +500,8 @@
                               android:id="@+id/withincardnumTV"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
-                              android:layout_gravity="right"
+                              android:layout_marginTop="@dimen/_4sdp"
+                              android:layout_gravity="right|center"
                               android:fontFamily="@font/opensans_semibold"
                               android:text="...4545"
                               android:textColor="@color/primary_black"
