--- a/app/src/main/res/layout/payrequestdetails.xml
+++ b/app/src/main/res/layout/payrequestdetails.xml
@@ -146,13 +146,9 @@
 
                         <TextView
                             android:id="@+id/payreqStatusTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="@dimen/_2sdp"
-                            android:paddingLeft="@dimen/_16sdp"
-                            android:paddingRight="@dimen/_16sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
-                            android:paddingTop="@dimen/_2sdp"
+                            android:layout_width="@dimen/_68sdp"
+                            android:layout_height="@dimen/_14sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:background="@drawable/fill_grn_color_smallradius"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
