--- a/app/src/main/res/layout/pending_posted_listitem.xml
+++ b/app/src/main/res/layout/pending_posted_listitem.xml
@@ -62,16 +62,13 @@
 
         <TextView
             android:id="@+id/statusTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_14sdp"
             android:layout_below="@id/topLL"
             android:layout_marginStart="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/opensans_bold"
-            android:paddingStart="@dimen/_20sdp"
-            android:paddingTop="@dimen/_2sdp"
-            android:paddingEnd="@dimen/_20sdp"
-            android:paddingBottom="@dimen/_2sdp"
+            android:gravity="center"
             android:text="Pending"
             android:textColor="#FFA701"
             android:textSize="@dimen/_7ssp" />
