--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -71,10 +71,8 @@
                     android:id="@+id/lyPayMethod"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    android:layout_marginBottom="@dimen/_18sdp"
-                    android:paddingTop="@dimen/_16sdp"
-                    android:paddingBottom="@dimen/_16sdp">
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp">
 
                     <ImageView
                         android:id="@+id/imgBankIcon"
@@ -91,8 +89,9 @@
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
+                        android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <TextView
                             android:id="@+id/tvPayHead"
@@ -116,7 +115,7 @@
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/lyBDetails"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -124,13 +123,16 @@
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
-                        android:orientation="horizontal">
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/tvBankName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_toLeftOf="@+id/tvBAccNumber"
+                            android:layout_centerVertical="true"
+                            android:layout_weight="0.6"
                             android:fontFamily="@font/opensans_semibold"
                             android:singleLine="true"
                             android:text="Bank of America"
@@ -139,21 +141,21 @@
 
                         <TextView
                             android:id="@+id/tvBAccNumber"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_weight="1.4"
                             android:fontFamily="@font/opensans_semibold"
                             android:text="••••5359"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
-                    </RelativeLayout>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/tvLimit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lyBDetails"
+                        android:layout_below="@+id/lyCDetails"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:layout_marginRight="@dimen/_10sdp"
@@ -179,6 +181,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_18sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_32sdp"
                 android:background="@color/white"
@@ -227,7 +230,7 @@
                                 android:autoSizeMinTextSize="@dimen/_12ssp"
                                 android:background="@color/white"
                                 android:fontFamily="@font/opensans_bold"
-                                android:gravity="center_vertical|right"
+                                android:gravity="center_vertical"
                                 android:hint="0.00"
                                 android:inputType="numberDecimal"
                                 android:maxLength="7"
