--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -22,15 +22,17 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layoutBank"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="visible">
 
             <TextView
-                android:id="@+id/tvPayHead"
+                android:id="@+id/tvBankName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:fontFamily="@font/opensans_semibold"
                 android:singleLine="true"
                 android:text="Bank of America"
@@ -38,17 +40,17 @@
                 android:textSize="@dimen/_12ssp"></TextView>
 
             <TextView
-                android:id="@+id/tvNumber"
+                android:id="@+id/tvAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="••••5359"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp"></TextView>
 
             <ImageView
-                android:id="@+id/imgTick"
+                android:id="@+id/imgBankTick"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_20sdp"
@@ -56,6 +58,49 @@
                 android:visibility="gone"
                 app:tint="@color/primary_green" />
         </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/layoutCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tvCardName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="Bank Name"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/tvCardNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/_6sdp"
+                android:layout_toRightOf="@+id/tvCardName"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="••••5359"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <ImageView
+                android:id="@+id/imgCardTick"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:src="@drawable/ic_custom_tick"
+                android:visibility="gone"
+                app:tint="@color/primary_green" />
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/layoutError"
