--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -545,7 +545,7 @@
                 android:layout_marginLeft="@dimen/_21sdp"
                 android:layout_marginRight="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_bold"
-
+                android:visibility="gone"
                 />
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -555,6 +555,7 @@
                 android:layout_marginRight="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
+                android:visibility="gone"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
