--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -414,7 +414,7 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -820,7 +820,7 @@
                                 android:id="@+id/txnRV"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
 
                             <TextView
                                 android:id="@+id/noTxnTV"
@@ -833,7 +833,7 @@
                                 android:text="You have no recent transactions"
                                 android:textColor="@color/light_gray"
                                 android:textSize="@dimen/_10ssp"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
 
                         </LinearLayout>
 
