--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -210,7 +210,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Visa or MasterCard debit cards"
+                        android:text="Visa or MasterCard Debit Cards"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_9sdp" />
 
@@ -293,7 +293,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Visa, MasterCard, Discover, and American \nExpress credit cards"
+                        android:text="Visa, MasterCard, Discover, and American \nExpress Credit Cards"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_9sdp" />
 
