--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -73,7 +73,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
-                        android:hint="Merchant’s Name/Reference ID."
+                        android:hint="Reference ID."
                         android:maxLines="1"
                         android:singleLine="true"
                         android:imeOptions="actionDone"
@@ -130,7 +130,7 @@
                     android:gravity="center_vertical"
                     android:text="Pending"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12sdp"
+                    android:textSize="@dimen/_12ssp"
                     android:visibility="gone" />
 
                 <LinearLayout
