--- a/app/src/main/res/layout/posted_inner_item.xml
+++ b/app/src/main/res/layout/posted_inner_item.xml
@@ -3,23 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/dateTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/et_bg_gray"
-        android:fontFamily="@font/opensans_bold"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:clickable="false"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        android:text="Date"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp"
-        android:visibility="visible" />
 
     <RelativeLayout
         android:id="@+id/layoutTopRadiusRL"
@@ -28,36 +13,38 @@
         android:background="@color/white"
         android:paddingTop="@dimen/_10sdp"
         android:paddingBottom="@dimen/_10sdp">
-<LinearLayout
-    android:id="@+id/topLL"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-        <TextView
-            android:id="@+id/messageTV"
+
+        <LinearLayout
+            android:id="@+id/topLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_11sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Send funds from Alison L"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/messageTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_semibold"
+                android:singleLine="true"
+                android:text="Send funds from Alison L"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
 
 
-        <TextView
-            android:id="@+id/amountTV"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/_11sdp"
-            android:fontFamily="@font/opensans_bold"
-            android:singleLine="true"
-            android:gravity="right"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp" />
-</LinearLayout>
+            <TextView
+                android:id="@+id/amountTV"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/_11sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="right"
+                android:singleLine="true"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+        </LinearLayout>
 
 
         <TextView
@@ -81,11 +68,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/topLL"
             android:layout_marginTop="@dimen/_8sdp"
-            android:gravity="right"
             android:layout_toLeftOf="@id/balanceTV"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Balance "
             android:layout_weight="1"
+            android:fontFamily="@font/opensans_semibold"
+            android:gravity="right"
+            android:text="Balance "
             android:textColor="@color/light_gray"
             android:textSize="@dimen/_10ssp" />
 
@@ -109,6 +96,7 @@
         android:id="@+id/viewV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <View
@@ -135,6 +123,7 @@
     <View
         android:id="@+id/blankView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_15sdp"
+        android:layout_height="@dimen/_20sdp"
         android:visibility="gone" />
+
 </LinearLayout>
