Scan Activity Album Feature Added

--- a/app/src/main/res/layout/activity_pay_request_transaction.xml
+++ b/app/src/main/res/layout/activity_pay_request_transaction.xml
@@ -170,7 +170,7 @@
                             android:fontFamily="@font/opensans_bold"
                             android:text="$"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_32sdp"
+                            android:textSize="@dimen/_40ssp"
                             android:visibility="gone" />
 
                         <EditText
@@ -181,21 +181,19 @@
                             android:layout_gravity="center"
                             android:layout_toRightOf="@id/amontDollorTV"
                             android:background="@android:color/transparent"
-                            android:clickable="false"
                             android:cursorVisible="true"
-                            android:editable="false"
-                            android:focusable="false"
                             android:fontFamily="@font/opensans_bold"
-                            android:gravity="right"
+                            android:gravity="center_vertical|right"
                             android:hint="0.00"
-                            android:inputType="number"
-                            android:maxLength="11"
+                            android:ellipsize="end"
+                            android:inputType="numberDecimal"
+                            android:maxLength="8"
                             android:singleLine="true"
                             android:text=""
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color_text"
-                            android:textDirection="ltr"
+                            android:textDirection="rtl"
                             android:textSize="@dimen/_40ssp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
