--- a/app/src/main/res/layout/fragment_request_amount_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_request_amount_bottom_sheet.xml
@@ -9,7 +9,7 @@
     tools:context=".fragments.RequestAmountBottomSheet">
 
         <View
-            android:layout_width="@dimen/_60sdp"
+            android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_2sdp"
             android:background="@drawable/bg_core_colorfill"
             android:layout_gravity="center"
@@ -96,31 +96,37 @@
                 android:layout_marginTop="@dimen/_7sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 />
-            <TextView
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:id="@+id/copyrequeRecipientLL"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textFontWeight="1"
-                android:layout_weight="1"
-                android:text="Hgj34239274"
-                android:textSize="@dimen/_11ssp"
-                android:gravity="right"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/black"
-                android:layout_marginRight="@dimen/_6sdp"
                 android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginRight="@dimen/_6sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:id="@+id/recipReqAddreTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="right"
+                    android:textColor="@color/black"
+                    android:textFontWeight="1"
+                    android:textSize="@dimen/_11ssp"
 
-                />
-            <ImageView
-                android:layout_width="@dimen/_15sdp"
-                android:layout_height="@dimen/_15sdp"
-                android:src="@drawable/ic_copy"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                />
+                    />
+
+                <ImageView
+                    android:layout_width="@dimen/_11sdp"
+                    android:layout_height="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:src="@drawable/ic_copy" />
+            </LinearLayout>
         </LinearLayout>
         <TextView
+            android:id="@+id/messageReTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Message"
